--- a/www/src/components/Game/game-layout.css
+++ b/www/src/components/Game/game-layout.css
@@ -1,24 +1,24 @@
 .fullscreen-game {
-  position: absolute; 
-
-  margin: auto;
-
-  height:100%; 
-  width:100%;
-  
   display: grid;
-  grid-template-columns: auto minmax(250px, 250px);
+  width: 100%;
+  grid-template-columns: 1fr 250px;
   grid-template-rows: min-content minmax(300px, auto) min-content;
-  align-content: stretch;
-  align-items: stretch;
-  justify-items: stretch;
+}
+
+.player-area {
+  border-style: solid;
+  border-color: black;
+  
 }
 
 .player-area-top {
   grid-row: 1;
   grid-column-start: 1;
   grid-column-end: 3;
+
 }
+
+
 .player-area-bottom {
   grid-row: 3;
   grid-column-start: 1;
@@ -34,3 +34,4 @@
   grid-row: 2;
   grid-column: 2;
 }
+
