Updated wording on AI Design page

--- a/www/src/assets/styles/text-style.css
+++ b/www/src/assets/styles/text-style.css
@@ -43,3 +43,7 @@
 .font-color-secondary {
     color: var(--text-secondary);
 }
+
+.font-color-alt-primary {
+    color: var(--text-alt-primary);
+}
